--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.html
@@ -8,7 +8,7 @@
 
 	<div class="effects-container" fxFlex="100%" fxLayoutAlign="space-evenly none">
 		<div>
-			<h4>{{ 'PANEL.BACKGROUND.BLURRED_SECTION' | translate }}</h4>
+			<h4 class="background-title">{{ 'PANEL.BACKGROUND.BLURRED_SECTION' | translate }}</h4>
 			<div>
 				<button
 					*ngFor="let effect of noEffectAndBlurredBackground"
@@ -29,7 +29,7 @@
 		</div>
 		<hr />
 		<div>
-			<h4>{{ 'PANEL.BACKGROUND.IMAGES_SECTION' | translate }}</h4>
+			<h4 class="background-title">{{ 'PANEL.BACKGROUND.IMAGES_SECTION' | translate }}</h4>
 
 			<div class="grid">
 				<div
