--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.scss
@@ -1,3 +1,6 @@
+.background-title {
+	color: var(--ov-text-surface-color);
+}
 .effects-container {
 	display: block !important;
 	overflow-y: auto;
