--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/settings/lang-selector/lang-selector.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/settings/lang-selector/lang-selector.component.html
@@ -1,6 +1,6 @@
 <button *ngIf="!compact" mat-flat-button [matMenuTriggerFor]="menu" class="lang-button" id="lang-btn">
 	<span id="lang-selected-name">{{ langSelected?.name }}</span>
-	<mat-icon>expand_more</mat-icon>
+	<mat-icon class="expand-more-icon">expand_more</mat-icon>
 </button>
 <button id="lang-btn-compact" *ngIf="compact" mat-icon-button [matMenuTriggerFor]="menu">
 	<mat-icon>translate</mat-icon>
