ov-components: Updated css variable names

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/panel.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/panel.component.scss
@@ -29,7 +29,7 @@
 
 .panel-close-button {
 	margin-left: auto;
-	border-radius: var(--ov-buttons-radius);
+	border-radius: 50%;
 }
 
 ::-webkit-scrollbar {
