--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.scss
@@ -57,7 +57,7 @@
 	}
 
 	#mute-btn {
-		border-radius: var(--ov-buttons-radius);
+		border-radius: 50%;
 		color: var(--ov-text-surface-color);
 	}
 
