--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/toolbar/toolbar.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/toolbar/toolbar.component.scss
@@ -56,7 +56,7 @@ $ov-recording-blinking-color: #eb5144;
 
 	#media-buttons-container button,
 	#menu-buttons-container button {
-		border-radius: var(--ov-buttons-radius);
+		border-radius: var(--ov-toolbar-buttons-radius);
 		color: var(--ov-secondary-action-color);
 	}
 
