--- a/openvidu-components-angular/src/styles.scss
+++ b/openvidu-components-angular/src/styles.scss
@@ -40,7 +40,7 @@ body {
 	--ov-text-primary-color: #ffffff;
 	--ov-text-surface-color: #1d1d1d;
 
-	--ov-buttons-radius: 50%;
+	--ov-toolbar-buttons-radius: 50%;
 	--ov-leave-button-radius: 10px;
 	--ov-video-radius: 5px;
 	--ov-surface-radius: 5px;
