--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/layout/layout.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/layout/layout.component.scss
@@ -31,7 +31,7 @@
 
 .OV_root,
 .OV_root * {
-	color: var(--ov-text-primary-color);
+	color: var(--ov-secondary-action-color);
 	margin: 0;
 	padding: 0;
 	border: 0;
