ov-components: Fixed recording activity panel styles

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.html
@@ -67,9 +67,9 @@
 					<span *ngIf="recordingStatus === recStatusEnum.STOPPED">{{ 'TOOLBAR.START_RECORDING' | translate }}</span>
 				</button>
 
-				<span *ngIf="recordingStatus === recStatusEnum.STARTING">{{ 'PANEL.RECORDING.STARTING' | translate }} </span>
-				<span *ngIf="recordingStatus === recStatusEnum.STOPPING">{{ 'PANEL.RECORDING.STOPPING' | translate }} </span>
-				<span *ngIf="recordingStatus === recStatusEnum.FAILED">Message: </span>
+				<span *ngIf="recordingStatus === recStatusEnum.STARTING" class="recording-message">{{ 'PANEL.RECORDING.STARTING' | translate }} </span>
+				<span *ngIf="recordingStatus === recStatusEnum.STOPPING" class="recording-message">{{ 'PANEL.RECORDING.STOPPING' | translate }} </span>
+				<span *ngIf="recordingStatus === recStatusEnum.FAILED" class="recording-error">Message: </span>
 				<span *ngIf="recordingStatus === recStatusEnum.FAILED" class="recording-error">{{ recordingError }} </span>
 				<div>
 					<button
