--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.scss
@@ -72,6 +72,10 @@
 		text-align: center;
 	}
 
+	.recording-message {
+		color: var(--ov-text-surface-color);
+	}
+
 	.recording-error {
 		color: var(--ov-error-color);
 		font-weight: 600;
