--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/settings-panel/settings-panel.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/settings-panel/settings-panel.component.scss
@@ -52,7 +52,8 @@
 		--mdc-list-list-item-focus-state-layer-color: transparent !important;
 	}
 
-	::ng-deep .lang-selector .expand-more-icon {
+	::ng-deep .lang-selector .expand-more-icon,
+	::ng-deep .lang-selector mat-icon {
 		color: var(--ov-secondary-action-color) !important;
 	}
 
