Add enableTranscoding ingress option for WHIP

--- a/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
@@ -126,8 +126,8 @@ mat-chip-row {
   margin-bottom: 7px;
 }
 
-#ingress-simulcast {
-  margin-right: 6px;
+#ingress-video-codec-select {
+  margin-left: 6px;
 }
 
 #ingress-video-codec-select {
